--- a/webserver/public/app/home.html
+++ b/webserver/public/app/home.html
@@ -1,2 +1,4 @@
-<h1>Welcome</h1>
-<p>Sistema Web para la administración de la aplicación Trips </p>
+<div class="container-fluid text-center">
+    <h1>Welcome</h1>
+    <p>Sistema Web para la administración de la aplicación Trips </p>
+</div>
