--- a/webserver/public/app/home.html
+++ b/webserver/public/app/home.html
@@ -1,4 +1,4 @@
 <div class="container-fluid text-center">
-    <h1>Welcome</h1>
+    <h1>Bienvenidos</h1>
     <p>Sistema Web para la administración de la aplicación Trips </p>
 </div>
