#216 Ya estaría el grafico para el reporte1. Faltaria integrar con backend cuando esté ok.

--- a/webserver/public/app/home.html
+++ b/webserver/public/app/home.html
@@ -1,4 +1,17 @@
-<div class="container-fluid text-center">
-    <h1>Bienvenidos</h1>
-    <p>Sistema Web para la administración de la aplicación Trips </p>
+<div class="container">
+    <h1 class="text-center">Bienvenidos</h1>
+    <div id="reporte1" ng-controller="Report1Controller">
+        <h3>Atracciones más visitadas en los últimos 12 meses</h3>
+        <div id="graficoReporte1">
+
+        </div>
+    </div>
+
+    <div id="reporte2">
+        <h3>Usuarios únicos globales</h3>
+    </div>
+
+    <div id="reporte3">
+        <h3>Usuarios únicos globales</h3>
+    </div>
 </div>
