--- a/webserver/public/app/home.html
+++ b/webserver/public/app/home.html
@@ -11,7 +11,16 @@
         <h3>Usuarios únicos globales</h3>
     </div>
 
-    <div id="reporte3">
-        <h3>Usuarios únicos globales</h3>
+    <div id="reporte3" ng-controller="Report3Controller">
+        <h3>Usuarios únicos por pais</h3>
+        <div class="row">
+            <div class="col-sm-6">
+                <div id="graficoReporte3">
+                </div>
+            </div>
+            <div class="col-sm-6">
+
+            </div>
+        </div>
     </div>
 </div>
