--- a/webserver/public/app/home.html
+++ b/webserver/public/app/home.html
@@ -85,7 +85,12 @@
             </span>
 
         </div>
-        <div class="row">
+
+        <div ng-show="!hayDatos" style="margin-top:50px;margin-bottom:50px;">
+            <h3>No hay datos</h3>
+        </div>
+
+        <div class="row" ng-show="hayDatos">
             <div class="col-sm-6">
                 <div class="text-center" style="height:50px">
                     <h3>Distribución por pais</h3>
